Atualizando Versão Mobile

--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -2,20 +2,14 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="UTF-8" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sonyvroculos</title>
-
     <link rel="stylesheet" href="_css/estilo.css" />
     <link rel="stylesheet" href="_css/form.css" />
-    <style>
-        @font-face {
-            font-family: "textos";
-            src: url("../projeto-playstation-vr/_fonts/GothamLight.ttf");
-        }
-    </style>
-
-
+    <link rel="shortcut icon" href="./_imagens/icon.jpg" type="image/x-icon">
 </head>
 
 <script src="_javascript/funcoes.js"></script>
@@ -31,16 +25,28 @@
 
 <body>
 
-
     <div id="interface">
+        <nav class="hamburger">
 
+            <input type="checkbox" id="active">
+            <label for="active" class="menu-btn"><span></span></label>
+            <label for="active" class="close"></label>
+            <div class="wrapper">
+                <ul>
+                    <li><a href="index.html"> Home</a></li>
+                    <li><a href="specs.html"> Especificações</a></li>
+                    <li><a href="fotos.html"> Fotos </a></li>
+                    <li><a href="multimidia.html"> Multimídia</a></li>
+                    <li><a href="#">Feedback</a></li>
+                </ul>
+            </div>
+            <div class="content">
+
+        </nav>
         <header id="cabecalho">
             <hgroup id="titulo">
-
                 <h1>Playstation Virtual Reality</h1>
                 <h2></h2>
-
-
             </hgroup>
 
             <figure>
