--- a/multimidia.html
+++ b/multimidia.html
@@ -5,9 +5,12 @@
 
     <meta charset="UTF-8" />
     <title>sonyvroculos</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="_css/estilo.css" />
     <link rel="stylesheet" href="_css/media.css" />
+    <link rel="shortcut icon" href="./_imagens/icon.jpg" type="image/x-icon">
 
 
 </head>
@@ -18,6 +21,22 @@
 
     <div id="interface">
 
+        <nav class="hamburger">
+
+            <input type="checkbox" id="active">
+            <label for="active" class="menu-btn"><span></span></label>
+            <label for="active" class="close"></label>
+            <div class="wrapper">
+                <ul>
+                    <li><a href="index.html"> Home</a></li>
+                    <li><a href="specs.html"> Especificações</a></li>
+                    <li><a href="fotos.html"> Fotos </a></li>
+                    <li><a href="multimidia.html"> Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Contato</a></li>
+                </ul>
+            </div>
+        </nav>
+            
         <header id="cabecalho">
 
             <hgroup id="titulo">
@@ -47,7 +66,7 @@
         <hgroup id="infometas">
 
             <h1>Esta é a Central de <br> Multimídia do nosso site</h1>
-            <h3 class="segredo">Site desenvolvido por Eduardo Leite (Atualizado em 22/01/2022)</h3>
+            <p class="segredo">Site desenvolvido por Eduardo Leite (Atualizado em 22/01/2022)</p>
 
         </hgroup>
 
