--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-br">
 
 <head>
-
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sonyvroculos</title>
-
     <link rel="stylesheet" href="_css/estilo.css" />
     <link rel="stylesheet" href="_css/specs.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./_imagens/icon.jpg" type="image/x-icon">
 
 </head>
 
@@ -15,16 +19,28 @@
 
 <body>
 
-
     <div id="interface">
+        <nav class="hamburger">
 
+            <input type="checkbox" id="active">
+            <label for="active" class="menu-btn"><span></span></label>
+            <label for="active" class="close"></label>
+            <div class="wrapper">
+                <ul>
+                    <li><a href="index.html"> Home</a></li>
+                    <li><a href="specs.html"> Especificações</a></li>
+                    <li><a href="fotos.html"> Fotos </a></li>
+                    <li><a href="multimidia.html"> Multimídia</a></li>
+                    <li><a href="fale-conosco.html">Contato</a></li>
+                </ul>
+            </div>
+            <div class="content">
+
+        </nav>
         <header id="cabecalho">
             <hgroup id="titulo">
-
                 <h1>Playstation Virtual Reality</h1>
-                <h2></h2>
-
-
+              
             </hgroup>
 
             <figure>
@@ -38,7 +54,7 @@
                     <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/vrsonypeq.png')"><a href="specs.html"> Especificações</a></li>
                     <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/vrsonypeq.png')"><a href="fotos.html"> Fotos </a></li>
                     <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/vrsonypeq.png')"><a href="multimidia.html"> Multimídia</a></li>
-                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/vrsonypeq.png')"><a href="fale-conosco.html">Sobre Este Site</a></li>
+                    <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/vrsonypeq.png')"> <a href="fale-conosco.html">Sobre Este Site</a> </li>
                 </ul>
             </nav>
 
@@ -49,15 +65,19 @@
             <hgroup id="infometas">
 
                 <h1>Saiba tudo sobre <br>o Oculos VR da Sony</h1>
-                <h3 class="segredo">Site desenvolvido por Eduardo Leite (Atualizado em 22/01/2022)</h3>
+                <p class="segredo">Site desenvolvido por Eduardo Leite (Atualizado em 22/01/2022)</p>
 
             </hgroup>
 
             <article>
                 <h2>O que é?</h2>
                 <p>
-                    PlayStation VR é o headset de realidade virtual da Sony. O aparelho foi lançado em outubro de 2016 e tem preço de US$ 399. O Launch Bundle terá visor, unidade de processamento, fones estéreo, cabo HDMI, cabo USB, adaptador de energia e adaptador para
-                    headsets próprios, além de um jogo de demonstração que vem na caixa, chamado de PlayStation Worlds VR</a>. O óculos de realidade virtual é compatível com o PS4 e conta com telas OLED e resolução Full HD, que suporta
+                    PlayStation VR é o headset de realidade virtual da Sony. O aparelho foi lançado em outubro de 2016 e
+                    tem preço de US$ 399. O Launch Bundle terá visor, unidade de processamento, fones estéreo, cabo
+                    HDMI, cabo USB, adaptador de energia e adaptador para
+                    headsets próprios, além de um jogo de demonstração que vem na caixa, chamado de PlayStation Worlds
+                    VR</a>. O óculos de realidade virtual é compatível com o PS4 e conta com telas OLED e resolução Full
+                    HD, que suporta
                     até 120 frames por segundo.</p>
             </article>
 
@@ -66,8 +86,7 @@
                 <img src="_imagens/vrfoto2.jpg">
 
                 <figcaption id="texto">
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <h3>SONY VR <br>Uma nova maneira de ver o mundo!</h3>
+                    <p>SONY VR <br>Uma nova maneira de ver o mundo!</p>
 
                 </figcaption>
 
@@ -76,7 +95,9 @@
 
             <article>
                 <h2>Data de lançamento</h2>
-                <p>O PS VR original, conhecido anteriormente como “Project Morpheus”, foi lançado em outubro de 2016 pela companhia japonesa. O equipamento promete uma experiência completamente imersiva nos jogos, com visão de 360 graus, visuais de 120 fps,
+                <p>O PS VR original, conhecido anteriormente como “Project Morpheus”, foi lançado em outubro de 2016
+                    pela companhia japonesa. O equipamento promete uma experiência completamente imersiva nos jogos, com
+                    visão de 360 graus, visuais de 120 fps,
                     áudio 3D, microfone integrado e mais.</p>
             </article>
             <article>
@@ -86,56 +107,59 @@
             <figure class="fotoleg">
                 <img src="_imagens/tabela.png">
             </figure>
-            <article id="textspc">
+            <article>
                 <h2>Como funciona</h2>
-                <p>Como o PS4 é menos poderoso do que os PCs com capacidade de RV, o PSVR inclui uma unidade de processador para lidar com o processamento de áudio 3D e outras tarefas de bastidores. Esta unidade fica entre o fone de ouvido PlayStation VR
-                    e a televisão, permitindo que você deixe o PlayStation VR conectado enquanto joga jogos não VR. Uma das coisas mais importantes sobre a realidade virtual é o rastreamento da cabeça, que permite que os jogos respondam quando você move
-                    a cabeça. O PlayStation VR consegue isso aproveitando a PlayStation Camera, que é capaz de rastrear LEDs embutidos na superfície do fone de ouvido. Os controladores do PlayStation Move são rastreados pela mesma câmera, o que os torna
-                    adequados para o propósito de controlar jogos de realidade virtual. No entanto, você tem a opção de usar um controlador PS4 normal para a maioria dos jogos.</p>
-
+                <p>Como o PS4 é menos poderoso do que os PCs com capacidade de RV, o PSVR inclui uma unidade de
+                    processador para lidar com o processamento de áudio 3D e outras tarefas de bastidores. Esta unidade
+                    fica entre o fone de ouvido PlayStation VR
+                    e a televisão, permitindo que você deixe o PlayStation VR conectado enquanto joga jogos não VR. Uma
+                    das coisas mais importantes sobre a realidade virtual é o rastreamento da cabeça, que permite que os
+                    jogos respondam quando você move a cabeça. O PlayStation VR consegue isso aproveitando a PlayStation 
+                    Camera, que é capaz de rastrear LEDs embutidos na superfície do fone de ouvido. Os controladores do 
+                    PlayStation Move são rastreados pela mesma câmera, o que os torna adequados para o propósito de 
+                    controlar jogos de realidade virtual. No entanto, você tem a opção de usar um controlador PS4 normal 
+                    para a maioria dos jogos.</p>
+            </article>
+            <article>
                 <h2>Principais jogos do Playstation VR</h2>
-                <p>Arkham VR, Superhot VR, Doom VFR, e Until Down: Rush of Blood são jogos de realidade virtual exclusivos ou com versões para o PlayStation VR, aproveitando elementos de jogos já lançados para o console para criar novas experiências em realidade
-                    virtual.
+                <p>Arkham VR, Superhot VR, Doom VFR, e Until Down: Rush of Blood são jogos de realidade virtual
+                    exclusivos ou com versões para o PlayStation VR, aproveitando elementos de jogos já lançados para o
+                    console para criar novas experiências em realidade virtual.
                 </p>
             </article>
 
-            <div id="linha-vertical"></div>
-            <div id="linha-horizontal"></div>
-
-
-
-
         </section>
+        <div id="linha-horizontal"></div>
 
         <figure id="bannerlateral">
             <img src="_imagens/bannerlateral.png" alt="">
         </figure>
-
 
         <video controls src="_media/video1.mp4"></video>
 
 
         <aside id="lateral">
 
-
-
             <article id="textofinal">
-
                 <h2>Outras Notícias</h2>
 
                 <h2>Novidades no VR da Sony</h2>
-                <p>A Sony anunciou que uma versão atualizada do PlayStation VR está vindo por aí, chegando no Japão primeiro antes de vir ao ocidente. A numeração do modelo é CUH-ZVR2 e ele possui diversas melhorias comparadas à versão original, listadas
-                    no blog americano da PlayStation. Há um novo design para integrar os cabos de fones de ouvido ao headset uma boa notícia para quem se enrolava no amontado de fios do primeiro modelo VR. </p>
+                <p>A Sony anunciou que uma versão atualizada do PlayStation VR está vindo por aí, chegando no Japão
+                    primeiro antes de vir ao ocidente. A numeração do modelo é CUH-ZVR2 e ele possui diversas melhorias
+                    comparadas à versão original, listadas no blog americano da PlayStation. Há um novo design 
+                    para integrar os cabos de fones de ouvido ao headset uma boa notícia para quem se enrolava 
+                    no amontado de fios do primeiro modelo VR. </p>
             </article>
-
-        </aside>
-        <footer id="rodape">
-            <br/>
-            <h3>Copyright 2022 - by Eduardo Leite<br/>
-                <a href="https://www.linkedin.com/in/eduardo-leite-78620b1a3/" target="_blank">Linkedin</a> |
-                <a href="https://api.whatsapp.com/send?phone=5588999257652" target="_blank"> Whatsapp</a></h3>
-        </footer>
     </div>
+
+    </aside>
+    <footer id="rodape">
+        <p>Copyright 2022 - by Eduardo Leite<br/>
+            <a href="https://www.linkedin.com/in/eduardo-leite-78620b1a3/" target="_blank">Linkedin</a> |
+            <a href="https://api.whatsapp.com/send?phone=5588999257652" target="_blank"> Whatsapp</a>
+        </p>
+    </footer>
+
 </body>
 
 </html>
