--- a/fotos.html
+++ b/fotos.html
@@ -36,9 +36,9 @@
         </nav>
         <header id="cabecalho">
             <hgroup id="titulo">
-                <h1>Playstation Virtual Reality</h1>
-                <h2></h2>
+                <h1>PsVR</h1>
             </hgroup>
+
 
             <figure>
                 <img id="icone" src="_imagens/vrsonypeq.png" height="40%">
@@ -65,7 +65,7 @@
         </hgroup>
 
         <article id="textoum">
-            <p>Várias belas imagens que mostram algumas das principais características do grande <br>Playstation VR como recursos e propriedades que estão impressionando o mundo inteiro.</p>
+            <p>Várias belas imagens que mostram algumas das principais características do grande Playstation VR como recursos e propriedades que estão impressionando o mundo inteiro.</p>
         </article>
 
         <ul id="fotos">
