--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         </nav>
         <header id="cabecalho">
             <hgroup id="titulo">
-                <h1>Playstation Virtual Reality</h1>
-              
+                <h1>PsVR</h1>
             </hgroup>
 
             <figure>
