--- a/specs.html
+++ b/specs.html
@@ -42,12 +42,9 @@
         </nav>
         <header id="cabecalho">
             <hgroup id="titulo">
-
-                <h1>Playstation Virtual Reality</h1>
-                <h2></h2>
-
-
+                <h1>PsVR</h1>
             </hgroup>
+
 
             <figure>
                 <img id="icone" src="_imagens/vrsonypeq.png" height="40%">
